--- a/LinearAlgebraUdacity.ipynb
+++ b/LinearAlgebraUdacity.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trival Vector Class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +33,7 @@
     "    \n",
     "    _EMPTY_COORDS = \"The Coordinates must be non-empty\"\n",
     "    _EQUAL_DIM = \"The Vectors must have equal dimension\"\n",
+    "    _DIM_ERROR = \"Function only defined for 3D Vector or 2D vector with set z=0\"\n",
     "    _MUST_BE_NUMERIC = \"Coordindates must be Numeric\"\n",
     "    _MUST_BE_VECTOR = \"Operation requires argument of type Vector\"\n",
     "    _NO_DIR_FOR_ZERO_VEC = \"Zero vector has no defined direction\"\n",
@@ -188,7 +196,31 @@
     "        if self._dimension != vin._dimension:\n",
     "            raise ValueError(Vector._EQUAL_DIM) \n",
     "\n",
-    "        return self - self.projection_onto(vin)\n"
+    "        return self - self.projection_onto(vin)\n",
+    "    \n",
+    "    def cross_product(self,vin):\n",
+    "        if vin.__class__.__name__ != self.__class__.__name__:\n",
+    "            raise TypeError(Vector._MUST_BE_VECTOR)\n",
+    "        if self.is_zero():\n",
+    "            return self # cross with zero is the zero vector\n",
+    "        if vin.is_zero():\n",
+    "            return vin # cross with zero is the zero vector\n",
+    "        if self._dimension != vin._dimension:\n",
+    "            raise ValueError(Vector._EQUAL_DIM) \n",
+    "        if self._dimension == 2:\n",
+    "            [x1,y1] = self._coordinates\n",
+    "            [x2,y2] = vin._coordinates\n",
+    "            z1 = 0\n",
+    "            z2 = 0\n",
+    "        elif self._dimension == 3:\n",
+    "            [x1,y1,z1] = self._coordinates\n",
+    "            [x2,y2,z2] = vin._coordinates\n",
+    "        else:\n",
+    "            raise ValueError(Vector._DIM_ERROR)\n",
+    "        \n",
+    "        return Vector([ (y1*z2 - y2*z1),\n",
+    "                       -(x1*z2 - x2*z1),\n",
+    "                        (x1*y2 - x2*y1)])\n"
    ]
   },
   {
@@ -202,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -211,6 +243,7 @@
     "class testVector(unittest.TestCase):\n",
     "\n",
     "    def _rnd_data():\n",
+    "        random.seed(42)\n",
     "        return list(map(lambda x: float(x)*float(1), [random.uniform(-10,10) for _ in range(4)]))\n",
     "    \n",
     "    def _pi(mul=float(1)):\n",
@@ -704,21 +737,119 @@
     "        self.assertRaisesRegex(ValueError, Vector._NO_PROJECTION_FOR_ZERO_VEC, lambda: Vector([0,0]).orth_projection_onto(Vector([0,0])))\n",
     "        self.assertRaisesRegex(ValueError, Vector._NO_PROJECTION_FOR_ZERO_VEC, lambda: Vector([0]).orth_projection_onto(Vector([0])))\n",
     "        self.assertRaisesRegex(ValueError, Vector._NO_PROJECTION_FOR_ZERO_VEC, lambda: Vector([0,0]).orth_projection_onto(Vector([1,1])))\n",
-    "        self.assertRaisesRegex(ValueError, Vector._NO_PROJECTION_FOR_ZERO_VEC, lambda: Vector([1,1]).orth_projection_onto(Vector([0,0])))\n"
+    "        self.assertRaisesRegex(ValueError, Vector._NO_PROJECTION_FOR_ZERO_VEC, lambda: Vector([1,1]).orth_projection_onto(Vector([0,0])))\n",
+    "\n",
+    "    def test_vector_cross_product(self):\n",
+    "        print(\"\\nTest Vector cross product\")\n",
+    "        TestCases = [\n",
+    "                     [[1,0,0],[0,1,0],[0,0,1],True],\n",
+    "                     [[0,1,0],[1,0,0],[0,0,-1],True],\n",
+    "                     [[-1,0,0],[0,1,0],[0,0,-1],True],\n",
+    "                     [[0,1,0],[-1,0,0],[0,0,1],True],            \n",
+    "                     [[-1,0,0],[0,0,1],[0,1,0],True],\n",
+    "                     [[0,0,1],[-1,0,0],[0,-1,0],True],\n",
+    "                     [[0,0,0],[0,0,0],[0,0,0],True],\n",
+    "                     [[1,1,1],[1,-1,-1],[0,2,-2],True],\n",
+    "                     [[1,-1,-1],[1,1,1],[0,-2,2],True],\n",
+    "                    ]        \n",
+    "        i = 1\n",
+    "        for case in TestCases:\n",
+    "            [test_data1, test_data2, expected_result, expected_equal] = case\n",
+    "            print(i,\", \",end='')\n",
+    "            self.assertEqual(Vector(test_data1).cross_product(Vector(test_data2)) == Vector(expected_result), expected_equal)\n",
+    "            i = i + 1\n",
+    "            \n",
+    "        # verify as orthogonal\n",
+    "        [a,b,c,d] = testVector._rnd_data()\n",
+    "        _pi = testVector._pi()         \n",
+    "        TestCases = [\n",
+    "                     [[a,0,0],[0,a,0],True],\n",
+    "                     [[0,b,0],[b,0,0],True],\n",
+    "                     [[-c,0,0],[0,c,0],True],\n",
+    "                     [[0,d,0],[-d,0,0],True],            \n",
+    "                     [[-a,0,0],[0,0,a],True],\n",
+    "                     [[0,0,b],[-b,0,0],True],\n",
+    "                    ]        \n",
+    "\n",
+    "        for case in TestCases:\n",
+    "            [test_data1, test_data2, expected_equal] = case\n",
+    "            print(i,\", \",end='')\n",
+    "            \n",
+    "            v1 = Vector(test_data1).cross_product(Vector(test_data2))\n",
+    "            a1 = v1.angle(Vector(test_data1)) + v1.angle(Vector(test_data2))\n",
+    "            v2 = Vector(test_data2).cross_product(Vector(test_data1))\n",
+    "            a2 = v1.angle(Vector(test_data1)) + v1.angle(Vector(test_data2))\n",
+    "            \n",
+    "            self.assertEqual((a1 - _pi) < 1e-10, expected_equal)\n",
+    "            self.assertEqual((a2 - _pi) < 1e-10, expected_equal)\n",
+    "            i = i + 1\n",
+    "        print(\"-Done\")\n",
+    "        self.assertRaisesRegex(ValueError, Vector._EQUAL_DIM, lambda: Vector([1,2]).cross_product(Vector([1,2,3])))\n",
+    "        self.assertRaisesRegex(ValueError, Vector._DIM_ERROR, lambda: Vector([1]).cross_product(Vector([1])))\n",
+    "        self.assertRaisesRegex(ValueError, Vector._DIM_ERROR, lambda: Vector([1,2,3,4]).cross_product(Vector([1,2,3,4])))\n",
+    "        self.assertRaisesRegex(TypeError, Vector._MUST_BE_VECTOR, lambda: Vector([0]).cross_product(True))\n",
+    "        self.assertRaisesRegex(TypeError, Vector._MUST_BE_VECTOR, lambda: Vector([0]).cross_product(int(0)))\n",
+    "        self.assertRaisesRegex(TypeError, Vector._MUST_BE_VECTOR, lambda: Vector([0]).cross_product(float(0)))\n",
+    "        self.assertRaisesRegex(TypeError, Vector._MUST_BE_VECTOR, lambda: Vector([0]).cross_product('A'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Test Vector cross product\n",
+      "1 , 2 , 3 , 4 , 5 , 6 , 7 , 8 , 9 , 10 , 11 , 12 , 13 , 14 , 15 , -Done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.022s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Run A Single Test\n",
+    "#\n",
+    "test_to_run = \"test_vector_cross_product\"\n",
+    "suite = unittest.TestSuite()\n",
+    "suite.addTest(testVector(test_to_run))\n",
+    "runner = unittest.TextTestRunner()\n",
+    "runner.run(suite)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -727,7 +858,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..............."
+      "................"
      ]
     },
     {
@@ -755,6 +886,9 @@
       "\n",
       "Test Vector angle between vectors\n",
       "1 , 2 , 3 , 4 , 5 , 6 , 7 , 8 , 9 , 10 , 11 , 12 , 13 , -Done\n",
+      "\n",
+      "Test Vector cross product\n",
+      "1 , 2 , 3 , 4 , 5 , 6 , 7 , 8 , 9 , 10 , 11 , 12 , 13 , 14 , 15 , -Done\n",
       "\n",
       "Test Vector direction (unit vector)\n",
       "1 , 2 , 3 , 4 , 5 , 6 , 7 , 8 , 9 , 10 , 11 , 12 , 13 , 14 , 15 , 16 , 17 , -Done\n",
@@ -787,7 +921,7 @@
      "text": [
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 15 tests in 0.154s\n",
+      "Ran 16 tests in 0.191s\n",
       "\n",
       "OK\n"
      ]
@@ -795,57 +929,27 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=15 errors=0 failures=0>"
+       "<unittest.runner.TextTestResult run=16 errors=0 failures=0>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#\n",
+    "# Run All Tests.\n",
+    "#\n",
     "tests = testVector()\n",
     "suite = unittest.TestLoader().loadTestsFromModule(tests)\n",
     "unittest.TextTestRunner().run(suite)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n",
-      "--\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = Vector([-7.579,-7.88])\n",
-    "b = Vector([22.737,23.64])\n",
-    "print(a.is_parallel_to(b))\n",
-    "print(a.is_orthogonal_to(b))\n",
-    "print(\"--\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -859,7 +963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
